# src/routes/accounts/handlers/sync-account-transactions.ts
@@ -7,6 +7,7 @@ import { syncTransactions } from '@/lib/utils/sync-transactions'
 export const SyncAccountTransactionsSchema = z.object({
   query: z.object({
     admin_key: z.string(),
+    account_id: z.string().optional(),
   }),
 })
 
@@ -19,13 +20,13 @@ export const syncAccountTransactions = async (
   req: ServerRequest<object, object, Request['query']>,
   res: ServerResponse,
 ) => {
-  const { admin_key } = req.query
+  const { admin_key, account_id } = req.query
 
   if (admin_key !== SYNC_ADMIN_KEY) {
     throw new ServerError(401)
   }
 
-  await syncTransactions()
+  await syncTransactions(account_id)
 
   res.json({ success: true })
 }
